--- a/src/css/Order.css
+++ b/src/css/Order.css
@@ -49,7 +49,8 @@
 }
 
 .step-divs {
-    border:  1px solid black;
+    box-shadow: 1px 1.5px 1.5px 1px rgba(0, 0, 0, .4);
+    background-color: #fbfbfb;
     padding: 1rem;
 }
 
@@ -127,4 +128,12 @@
 .green-box {
     padding: 3rem;
     background-color: green;
+}
+
+.placeholder-text::placeholder {
+    color: #868686;
+}
+
+.your-dominos-div {
+    margin-top: 0.5rem;
 }
